--- a/project1/index.css
+++ b/project1/index.css
@@ -5,6 +5,7 @@ h1{
 	font-size: 40px;
 	color: darkorange;
 	text-align: center;
+	font-weight: bold;
 }
 p{
 	font-family: arial;
@@ -12,8 +13,23 @@ p{
 	text-align: center;
 	color: orange;
 }
-ol#mainbody li,a{
-	padding: 12px;
-	font-size: 30px;
-	color: white;
+nav{
+	background: lightgrey;
+	height: 80px;
+	width: 100%;
+}
+nav ul li{
+	display: inline-block;
+	margin: 0 8px;
+	padding-top: 30px;
+}
+nav ul li a{
+	color: black;
+	font-size: 20px;
+	padding: 20px 50px;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+a.page,a:hover{
+	background: darkgrey;
 }
