--- a/project1/index.css
+++ b/project1/index.css
@@ -3,20 +3,27 @@ body{
 }
 h1{
 	font-size: 40px;
+	display: block;
 	color: darkorange;
 	text-align: center;
 	font-weight: bold;
 }
-p{
+section{
 	font-family: arial;
 	font-size: 20px;
 	text-align: center;
 	color: orange;
 }
+section p.special{
+	display: inline-block;
+	color: red;
+	font-weight: bold;
+}
 nav{
 	background: lightgrey;
 	height: 80px;
 	width: 100%;
+	border-radius: 10px;
 }
 nav ul li{
 	display: inline-block;
@@ -25,11 +32,20 @@ nav ul li{
 }
 nav ul li a{
 	color: black;
-	font-size: 20px;
-	padding: 20px 50px;
+	font-size: 15px;
+	padding: 20px 60px;
 	text-transform: uppercase;
 	text-decoration: none;
+	font-weight: bold;
 }
-a.page,a:hover{
+a.page{
 	background: darkgrey;
+	border-radius: 7px;
+}
+a:hover{
+	background: whitesmoke;
+	transition: 0.5s;
+}
+a:active{
+	background: lightblue;
 }
